--- a/src/main/resources/src/components/MainPage/WorkshopsComponents/TableView/TableView.scss
+++ b/src/main/resources/src/components/MainPage/WorkshopsComponents/TableView/TableView.scss
@@ -450,6 +450,7 @@
           padding: 20px 10px;
           padding-left: 10px;
           span {
+            align-self: center !important;
             &:nth-child(1) {
               margin-top: 0 !important;
               max-width: none;
